--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Symphony PDF</title>
 </head>
 <body style="margin:0">
-  <embed src="Symphony.pdf" type="application/pdf" width="100%" height="100vh" />
+  <embed src="Symphony.pdf" type="application/pdf" width="100%" height="100%" />
 </body>
 </html>
