--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <title>Symphony PDF</title>
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+  </style>
 </head>
-<body style="margin:0">
+<body>
   <embed src="Symphony.pdf" type="application/pdf" width="100%" height="100%" />
 </body>
 </html>
